WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285030
[GStreamer][WebAudio][Quirks] Fix initial WebAudio cut on Raspberry Pi
https://bugs.webkit.org/show_bug.cgi?id=285030
Summary
[GStreamer][WebAudio][Quirks] Fix initial WebAudio cut on Raspberry Pi
Enrique Ocaña
Reported
2024-12-20 09:39:14 PST
WebAudio playback eats up a portion of the start of a sound after a silence on Raspberry Pi when using OpenMAX.
Attachments
Add attachment
proposed patch, testcase, etc.
Enrique Ocaña
Comment 1
2024-12-23 08:39:32 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38336
EWS
Comment 2
2025-01-10 08:52:35 PST
Committed
288713@main
(45b9cba6ef32): <
https://commits.webkit.org/288713@main
> Reviewed commits have been landed. Closing PR #38336 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2025-01-10 08:53:16 PST
<
rdar://problem/142690978
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug