Source/WebCore/platform/GStreamer.cmake
@@ -74,6 +74,7 @@ if (ENABLE_VIDEO OR ENABLE_WEB_AUDIO)
         platform/gstreamer/GStreamerQuirkBcmNexus.cpp
         platform/gstreamer/GStreamerQuirkBroadcom.cpp
         platform/gstreamer/GStreamerQuirkBroadcomBase.cpp
+        platform/gstreamer/GStreamerQuirkOpenMAX.cpp
         platform/gstreamer/GStreamerQuirkRealtek.cpp
         platform/gstreamer/GStreamerQuirkRialto.cpp
         platform/gstreamer/GStreamerQuirkWesteros.cpp
